src/pydjinni/generator/objc/it/swift/error/expected/include/objc/ErrorTestSwift.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni

#import <Foundation/Foundation.h>
//! Project version number for bridgingheader.
FOUNDATION_EXPORT double bridgingheaderVersionNumber;

//! Project version string for bridgingheader.
FOUNDATION_EXPORT const unsigned char bridgingheaderVersionString[];

#import "SFTFooError.h"
#import "SFTBarError.h"
#import "SFTHelper.h"
#import "SFTThrowingCallback.h"
#import "SFTAsyncThrowingCallback.h"
